--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack",
+  "name": "webpack_learning",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -13,6 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.5",
     "css-loader": "^3.4.2",
+    "debug": "^4.1.1",
     "html-webpack-plugin": "^4.0.3",
     "js-base64": "^2.5.2",
     "js-md5": "^0.7.3",
@@ -25,9 +26,9 @@
     "sha1": "^1.1.1",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.42.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^2.11.3"
   },
   "browserslist": [
     "defaults",
